@@ -336,6 +336,17 @@ jQuery( function ( $ ) {
 					setSelectedUPEPaymentType( selectedUPEPaymentType );
 					isUPEComplete = event.complete;
 				} );
+
+				/*
+				 * Trigger this event to ensure the tokenization-form.js init
+				 * is executed.
+				 *
+				 * This script handles the radio input interaction when toggling
+				 * between the user's saved card / entering new card details.
+				 *
+				 * Ref: https://github.com/woocommerce/woocommerce/blob/2429498/assets/js/frontend/tokenization-form.js#L109
+				 */
+				$( document.body ).trigger( 'wc-credit-card-form-init' );
 			} )
 			.catch( ( error ) => {
 				unblockUI( $( upeLoadingSelector ) );
