@@ -5,7 +5,8 @@
 * Add - Text to explain how to enable webhooks when manually entering your API keys in the new Stripe settings.
 * Tweak - Redirect to the settings tab after an account is connected
 * Tweak - Show toast when payment methods list is updated with new payment methods.
-* Fix - JS error on checkout when Boleto method was not active  
+* Fix - JS error on checkout when Boleto method was not active
+* Fix - Fixed bug that show "Use new payment method" on pay order page when there were no saved card was.
 
 =======
 
